--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
-    "babel-loader": "^8.3.0",
+    "babel-loader": "^7.1.5",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.6.0",
+    "cors": "^2.8.5",
+    "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
     "sass": "^1.63.4",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^13.3.2",
     "style-loader": "^0.23.1",
     "webpack": "^5.88.0",
     "webpack-cli": "^5.1.4",
